# insurance-adapter-data

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md
.history/: README_20250227122133.md  README_20250227124146.md  README_20250227124317.md  README_20250227124358.md  README_20250227124512.md
data/prepared_data_stratified/: test.csv  validation.csv
docs/: explanation.md  how-to-guides.md  index.md
src/insuranceqaadapterdata/: data_preparation_stratified.py  data_validation.py
